Add manual evaluation workflow and validation job

--- a/cursos/sistemas-informacao/M07/workflows/avaliacao-manual.yml
+++ b/cursos/sistemas-informacao/M07/workflows/avaliacao-manual.yml
@@ -1,1 +1,11 @@
 # Workflow de avaliação manual
+
+name: Avaliação Manual
+
+on:
+  workflow_dispatch:
+
+jobs:
+  call-validation:
+    uses: ./.github/workflows/validate-sprint.yml
+    secrets: inherit
