--- a/.github/workflows/validate-sprint.yml
+++ b/.github/workflows/validate-sprint.yml
@@ -22,18 +22,21 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: List full directory tree
+        run: tree -a || find . -type d -name ".git" -prune -o -print | sed 's|[^/]*/|  |g'
+
       - name: Instalar dependências
-        run: pip install -r ../shared/requirements.txt
+        run: pip install -r ci-cd-templates/shared/requirements.txt
 
       - name: Verificar data de execução
-        run: python ../shared/check_date.py
+        run: python ci-cd-templates/shared/check_date.py
         env:
           DATE_SOURCE_URL: ${{ secrets.DATE_SOURCE_URL }}
 
       - name: Executar validações
-        run: python ../cursos/sistemas-informacao/M07/scripts/run_validations.py
+        run: python ci-cd-templates/cursos/sistemas-informacao/M07/scripts/run_validations.py
 
       - name: Postar resultado no Slack
-        run: python ../shared/post_slack.py
+        run: python ci-cd-templates/shared/post_slack.py
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
