Fix paths in validate-sprint workflow to use relative references for scripts and requirements

--- a/.github/workflows/validate-sprint.yml
+++ b/.github/workflows/validate-sprint.yml
@@ -26,17 +26,17 @@ jobs:
         run: tree -a || find . -type d -name ".git" -prune -o -print | sed 's|[^/]*/|  |g'
 
       - name: Instalar dependências
-        run: pip install -r ~/ci-cd-templates/shared/requirements.txt
+        run: pip install -r ci-cd-templates/shared/requirements.txt
 
       - name: Verificar data de execução
-        run: python ~/ci-cd-templates/shared/check_date.py
+        run: python ci-cd-templates/shared/check_date.py
         env:
           DATE_SOURCE_URL: ${{ secrets.DATE_SOURCE_URL }}
 
       - name: Executar validações
-        run: python ~/ci-cd-templates/cursos/sistemas-informacao/M07/scripts/run_validations.py
+        run: python ci-cd-templates/cursos/sistemas-informacao/M07/scripts/run_validations.py
 
       - name: Postar resultado no Slack
-        run: python ~/ci-cd-templates/shared/post_slack.py
+        run: python ci-cd-templates/shared/post_slack.py
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
