Refactor validate-sprint workflow to use 'cd' commands for script execution

--- a/.github/workflows/validate-sprint.yml
+++ b/.github/workflows/validate-sprint.yml
@@ -29,14 +29,20 @@ jobs:
         run: pip install -r ci-cd-templates/shared/requirements.txt
 
       - name: Verificar data de execução
-        run: python ci-cd-templates/shared/check_date.py
+        run: |
+          cd ci-cd-templates
+          python shared/check_date.py
         env:
           DATE_SOURCE_URL: ${{ secrets.DATE_SOURCE_URL }}
 
       - name: Executar validações
-        run: python ci-cd-templates/cursos/sistemas-informacao/M07/scripts/run_validations.py
+        run: |
+          cd ci-cd-templates
+          python cursos/sistemas-informacao/M07/scripts/run_validations.py
 
       - name: Postar resultado no Slack
-        run: python ci-cd-templates/shared/post_slack.py
+        run: |
+          cd ci-cd-templates
+          python shared/post_slack.py
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
